docs/tests/typing/bad/testfile-constructor-1.cpp
class A { public: };
class B { public: A(); };
int main() {}

